tests/baselines/reference/parserModifierOnStatementInBlock2.errors.txt
==== tests/cases/compiler/parserModifierOnStatementInBlock2.ts (1 errors) ====
    {
       declare var x = this;
       ~~~~~~~
!!! parserModifierOnStatementInBlock2.ts(2,4): error TS1055: Modifiers cannot appear here.
    }
    